# fastapi-first-steps

./: README.md  demo.html  main.py  pyproject.toml
