[tool.poetry]
name = "fastapi-codeclub-20240424"
version = "0.1.0"
description = ""
authors = ["Yuriy Shatrov <yuriy.shatrov@wolt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
